--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 .form-control input {
     background-color: transparent;
     border: 0;
-    border-bottom: 2px #fff solid;
+    border-bottom: 2px black solid;
     display: block;
     width: 100%;
     padding: 15px 0;
@@ -67,7 +67,7 @@ body {
     display: inline-block;
     font-size: 18px;
     min-width: 5px;
-    color: #fff;
+    color: black;
     transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
   
